--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
         header h1 {
             margin: 0;
         }
+        nav {
+            margin-top: 0.5rem;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 1rem;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
         main {
             padding: 2rem;
         }
@@ -36,6 +48,11 @@
 <body>
     <header>
         <h1>Welcome to My Home Page</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
     <main>
         <p>This is a simple home page created as a demo.</p>
